--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <h1>Welcome to the Blog Platform</h1>
 
     <div id="auth-section">
-        <h2>Login</h2>
+        <h2>Logвin</h2>
         <input type="email" id="email" placeholder="Email">
         <input type="password" id="password" placeholder="Password">
         <button id="login-btn">Login</button>
