--- a/Jornal.html
+++ b/Jornal.html
@@ -11,7 +11,8 @@
     <h1>Вітаємо тебе в Щоденнику для Біблії</h1>
     <a href="settings.html">Змінити/додати дані про себе</a>
     <a href="Add.html">Додати записи</a>
-    <a href="See.html">Переглянути записи</a>
+    <a href="See.h
+    tml">Переглянути записи</a>
     
 </body>
 </html>
