--- a/Jornal.html
+++ b/Jornal.html
@@ -3,15 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-
+    <title>Щоденник для Біблії</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            color: #333;
+        }
+        a {
+            display: block;
+            color: #007bff;
+            margin: 10px 0;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <h1>Вітаємо тебе в Щоденнику для Біблії</h1>
-    <a href="settings.html">Змінити/додати дані про себе</a>
-    <a href="Add.html">Додати записи</a>
-    <a href="See.html">Переглянути записи</a>
-    
+    <nav>
+        <a href="settings.html">Змінити/додати дані про себе</a>
+        <a href="Add.html">Додати записи</a>
+        <a href="See.html">Переглянути записи</a>
+    </nav>
 </body>
 </html>
