--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://www.gstatic.com/firebasejs/10.11.0/firebase-database.js"></script>
     <script type="module" src="js/Login.js" defer></script>
 
+    <link rel="manifest" href="manifest.json">
     <style>
       body {
         font-family: Arial, sans-serif;
@@ -22,18 +23,18 @@
         padding: 20px;
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        width: 400px;
+        width: 85vw;
         margin: auto;
       }
       input {
-        width: 100%;
+        width: 80%;
         padding: 8px;
         margin: 10px 0;
         border-radius: 4px;
         border: 1px solid #ccc;
       }
       button {
-        width: 100%;
+        width: 80%;
         padding: 10px;
         background-color: #007bff;
         color: white;
@@ -46,7 +47,7 @@
       }
       #signInMessage {
         margin-top: 10px;
-        color: red;
+        color: green;
       }
     </style>
 
