--- a/Add.html
+++ b/Add.html
@@ -69,6 +69,17 @@
     </style>
 </head>
 <body>
+    <p>
+        Що підтримується:
+	1.	Заголовки: #, ##, ###, ####, #####, ######.
+	2.	Жирний текст: **текст**, __текст__.
+	3.	Курсив: *текст*, _текст_.
+	4.	Жирний + курсив: ***текст***, ___текст___.
+	5.	Закреслений текст: ~~текст~~.
+	6.	Цитати: > текст.
+	7.	Нумеровані списки: 1. текст.
+	8.	Марковані списки: - текст, * текст.
+    </p>
     <form action="#" method="POST">
         <a href="Jornal.html">Повернутися назад</a><br>
 
