--- a/Jornal.html
+++ b/Jornal.html
@@ -83,8 +83,9 @@
     <div id="notesContainer">
         
     </div>
-
+    <button id="logoutButton">Вийти</button>
     
     <script type="module" src="js/request.js"></script> 
+    <script type="module" src="js/LogOut.js"></script>
 </body>
 </html>
