--- a/Add.html
+++ b/Add.html
@@ -69,17 +69,7 @@
     </style>
 </head>
 <body>
-    <p>
-        Що підтримується:
-	1.	Заголовки: #, ##, ###, ####, #####, ######.
-	2.	Жирний текст: **текст**, __текст__.
-	3.	Курсив: *текст*, _текст_.
-	4.	Жирний + курсив: ***текст***, ___текст___.
-	5.	Закреслений текст: ~~текст~~.
-	6.	Цитати: > текст.
-	7.	Нумеровані списки: 1. текст.
-	8.	Марковані списки: - текст, * текст.
-    </p>
+
     <form action="#" method="POST">
         <a href="Jornal.html">Повернутися назад</a><br>
 
@@ -96,6 +86,19 @@
         <textarea id="note" name="note" rows="6" required></textarea><br><br>
 
         <button type="submit" id="SaveNote">Зберегти</button>
+
+
+        <p>
+            Що підтримується:<br>
+        1.	Заголовки: #, ##, ###, ####, #####, ######.<br>
+        2.	Жирний текст: **текст**, __текст__.<br>
+        3.	Курсив: *текст*, _текст_.<br>
+        4.	Жирний + курсив: ***текст***, ___текст___.<br>
+        5.	Закреслений текст: ~~текст~~.<br>
+        6.	Цитати: > текст.<br>
+        7.	Нумеровані списки: 1. текст.<br>
+        8.	Марковані списки: - текст, * текст.<br>
+        </p>
     </form>
 </body>
 </html>
