--- a/editUserInfo.html
+++ b/editUserInfo.html
@@ -72,7 +72,7 @@
     </style>
 </head>
 <body>
-    <h1>Завершення реєстрації</h1>
+    <h1></h1>
     <p>Ваш ID: <span id="userid">12345</span></p>
     <form id="userInfoForm">
         <label for="lastName">Прізвище:</label><br>
@@ -84,6 +84,6 @@
         <button type="button" id="UserInfo">Зберегти</button>
     </form>
     
-    <script type="module" src="js/index.js"></script>
+    <script type="module" src="js/EditInfo.js"></script>
 </body>
 </html>
