--- a/Add.html
+++ b/Add.html
@@ -6,72 +6,12 @@
     <title>Додати Нотатку</title>
     <script type="module" src="js/add.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            margin: 0;
-            padding: 20px;
-            background-color: #e9ecef;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-        a {
-            display: inline-block;
-            margin-bottom: 20px;
-            color: #007bff;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        form {
-            background-color: #ffffff;
-            padding: 25px;
-            border-radius: 10px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 500px;
-        }
-        label {
-            font-weight: bold;
-            color: #333;
-        }
-        input, textarea {
-            width: calc(100% - 20px);
-            padding: 10px;
-            margin: 10px 0;
-            border-radius: 6px;
-            border: 1px solid #ced4da;
-            font-size: 14px;
-        }
-        input:focus, textarea:focus {
-            outline: none;
-            border-color: #007bff;
-            box-shadow: 0 0 5px rgba(0, 123, 255, 0.25);
-        }
-        button {
-            background-color: #007bff;
-            color: #fff;
-            padding: 12px 20px;
-            border: none;
-            border-radius: 6px;
-            font-size: 16px;
-            cursor: pointer;
-            width: 100%;
-            font-weight: bold;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-    </style>
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
 
     <form action="#" method="POST">
-        <a href="Jornal.html">Повернутися назад</a><br>
+        <button onclick="window.location.href='Jornal.html'">Повернутися назад</button>
 
         <label for="topic">Тема:</label><br>
         <input type="text" id="topic" name="topic" required><br><br>
@@ -96,8 +36,8 @@
         4.	Жирний + курсив: ***текст***, ___текст___.<br>
         5.	Закреслений текст: ~~текст~~.<br>
         6.	Цитати: > текст.<br>
-        7.	Нумеровані списки: 1. текст.<br>
-        8.	Марковані списки: - текст, * текст.<br>
+        8.	Нумеровані списки: 1. текст.<br>
+        9.	Марковані списки: - текст, * текст.<br>
         </p>
     </form>
 </body>
