--- a/Jornal.html
+++ b/Jornal.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Щоденник для Біблії</title>
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/media.css">
+
 </head>
 <body>
     <h1>Вітаємо</h1>
