--- a/editUserInfo.html
+++ b/editUserInfo.html
@@ -4,74 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Ubuntu', sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 20px;
-        }
-        h1 {
-            color: #333;
-            text-align: center;
-        }
-        a {
-            display: block;
-            color: #007bff;
-            margin: 10px 0;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        form {
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
-            margin: auto;
-        }
-        label {
-            font-weight: bold;
-            color: #333;
-        }
-        input {
-            width: calc(100% - 20px);
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-size: 14px;
-        }
-        button {
-            width: 100%;
-            padding: 12px;
-            background-color: #007bff;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 16px;
-            font-weight: bold;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        p {
-            text-align: center;
-            font-size: 16px;
-            color: #555;
-        }
-        #userid {
-            font-weight: bold;
-            color: #007bff;
-        }
-    </style>
-</head>
+    <link rel="manifest" href="manifest.json">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/media.css">
+    </head>
 <body>
+    <div class="login">
     <h1></h1>
     <p>Ваш ID: <span id="userid">12345</span></p>
     <form id="userInfoForm">
@@ -83,6 +21,7 @@
 
         <button type="button" id="UserInfo">Зберегти</button>
     </form>
+</div>
     
     <script type="module" src="js/EditInfo.js"></script>
 </body>
